fix: fix nav-bar position and overflow scroll in all resolutions

--- a/src/ui/AppLayout/AppLayout.scss
+++ b/src/ui/AppLayout/AppLayout.scss
@@ -3,11 +3,6 @@
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-
-  .of-sc {
-    overflow: scroll;
-    overflow-x: hidden;
-  }
 }
 
 .bg {
@@ -23,4 +18,12 @@
   height: 100vh;
   width: 100vw;
   z-index: -1;
+}
+
+@media (min-width: 768px) {
+  .of-sc {
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 100dvh;
+  }
 }
