--- a/src/ui/AppLayout/Main.scss
+++ b/src/ui/AppLayout/Main.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   gap: 10px;
   padding-left: 2%;
-  height: 100vh;
+  height: 100%;
   position: relative;
 
   .tags {
