--- a/src/ui/SideBar/Sidebar.scss
+++ b/src/ui/SideBar/Sidebar.scss
@@ -1,7 +1,7 @@
 .nav-bar {
   background: #181818;
   width: 100px;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,6 +46,8 @@
   }
 
   .nav-bar {
+    position: sticky;
+    top: 0;
     height: auto;
     min-height: auto;
     width: 100%;
@@ -103,7 +105,9 @@
       }
 
       &.mobile-show {
-        margin-top: 60px;
+        position: absolute;
+        // top: -270px;
+        // margin-top: 60px;
         opacity: 1;
         height: auto;
         background: #18181899;
